✨ feat(course): 新增课程图片生成 API
- 定义 GetCourseImage Thrift 请求和响应结构
- 实现 GetCourseImage HTTP 接口 (GET /api/course)
- 在 CourseService 中集成第三方图片生成服务
- 引入 imageGenerate 配置用于存储第三方 API 密钥

--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -42,6 +42,10 @@ logger:
   dir: "logs"    # 日志文件存储目录
   env: "development"
 
+image_generate:
+  c_key: "xlsx"
+  id1: "xxxx"
+
 cors:
   allow_origins:
     - "http://*.yourang.top"
