--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -65,3 +65,4 @@ jobs:
         path: |
           LearnShare-${{ matrix.goos }}-${{ matrix.goarch }}*
           config/config.example.yaml
+          config/font/msyh.ttc
